--- a/css/style.css
+++ b/css/style.css
@@ -43,17 +43,19 @@ body {
 
 .navbar {
   padding: 1rem 0;
+    background-color: var(--dark-navy);
 }
 
 .navbar .container {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  background-color: var(--dark-navy);
 }
 
 .logo {
   height: 50px;
   width: auto;
+  align-items: center;
 }
 
 .nav-list {
@@ -64,10 +66,11 @@ body {
 
 .nav-link {
   text-decoration: none;
-  color: var(--dark-navy);
+  color: var(--light-gray);
   font-weight: 500;
   transition: var(--transition);
   position: relative;
+  margin-top: 3rem;
 }
 
 .nav-link:hover,
@@ -584,6 +587,8 @@ body {
   align-items: center;
   gap: 0.5rem;
   margin-bottom: 0.5rem;
+  margin: 0;
+  padding: 0;
 }
 
 .footer-bottom {
@@ -595,6 +600,7 @@ body {
 .footer-bottom a {
   color: var(--primary-blue);
   text-decoration: none;
+  font-weight: 600;
 }
 
 /* WhatsApp Float Button */
@@ -851,7 +857,7 @@ body {
 .scroll-top {
   position: fixed;
   bottom: 25px;
-  right: 360px;
+  right: 90rem;
   width: 50px;
   height: 50px;
   background: var(--primary-blue);
@@ -1415,7 +1421,6 @@ body {
 }
 
 .contact-info {
-  padding: 3rem;
   border-radius: 15px;
 }
 
@@ -1675,7 +1680,7 @@ body {
 
   .contact-form,
   .contact-info {
-    padding: 2rem;
+    padding: 0;
   }
 
   .pillar,
