--- a/css/style.css
+++ b/css/style.css
@@ -857,9 +857,9 @@ body {
 .scroll-top {
   position: fixed;
   bottom: 25px;
-  right: 90rem;
   width: 50px;
   height: 50px;
+  left: 20px;
   background: var(--primary-blue);
   color: var(--white);
   border-radius: 50%;
