--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,11 @@ body {
   justify-content: space-between;
   background-color: var(--dark-navy);
 }
+.nav-menu {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
 
 .logo {
   height: 50px;
@@ -98,7 +103,8 @@ body {
   display: none;
   flex-direction: column;
   cursor: pointer;
-  margin-top: 1rem;
+  margin-top: -1rem;
+  justify-content: center;
 }
 
 .hamburger span {
@@ -524,13 +530,13 @@ body {
 
 .footer-content {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 3rem;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 4rem;
   margin-bottom: 3rem;
 }
 
 .footer-logo {
-  height: 60px;
+  height: 40px;
   margin-bottom: 1rem;
 }
 
@@ -672,6 +678,9 @@ body {
 @media (max-width: 768px) {
   .hamburger {
     display: flex;
+  }
+  .nav-brand{
+    margin-left: 1.9rem;
   }
 
   .nav-menu {
