--- a/css/style.css
+++ b/css/style.css
@@ -1157,8 +1157,8 @@ body {
 }
 
 .service-icon {
-  width: 60px;
-  height: 60px;
+  width: 60px !important;
+  height: 60px !important;
   background: var(--primary-blue);
   border-radius: 50%;
   display: flex;
@@ -1729,7 +1729,7 @@ body {
   font-size: 0.8rem;
   font-weight: 500;
   position: absolute;
-  top: -10px;
+  top: -5px;
   right: 20px;
 }
 
